// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`handles source throwing non-NotFoundError 1`] = `
{
  "streams": [],
}
`;

exports[`handles source throwing non-NotFoundError 2`] = `
{
  "streams": [
    {
      "externalUrl": "https://example.com",
      "name": "WebStreamrMBG",
      "title": "🔗 ThrowingSource
❌ Request failed. Request-id: test.",
    },
  ],
}
`;

exports[`resolve adds error info 1`] = `
{
  "streams": [
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working1",
      "url": "https://example6.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working2",
      "url": "https://example9.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example1.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com",
    },
  ],
  "ttl": 1,
}
`;

exports[`resolve adds error info 2`] = `
{
  "streams": [
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example14.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
❌ Request to example14.com failed with status 418 (I'm a tea pot). Request-id: test.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example13.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
❌ Remote server example13.com has issues. We can't fix this, please try later again.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example12.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⏳ Request queue for example12.com is full. Please try again later or consider self-hosting.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example11.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
🐢 Request to example11.com timed out.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example10.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
❌ Request failed. Request-id: test.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example8.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
🚦 Too many recent timeouts when requesting example8.com. Please try again later.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example7.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
🚦 Request to example7.com was rate-limited. Please try again later or consider self-hosting.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example5.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ Request to example5.com was blocked. Reason: unknown",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example4.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ MediaFlow Proxy authentication failed. Please set the correct password.",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example3.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ Request to example3.com was blocked. Reason: cloudflare_censor",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example2.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com
⚠️ Request to example2.com was blocked. Reason: cloudflare_challenge",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working1",
      "url": "https://example6.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 working2",
      "url": "https://example9.com/",
    },
    {
      "behaviorHints": {
        "bingeGroup": "webstreamr-mbg-undefined-undefined-de",
        "notWebReady": true,
      },
      "externalUrl": "https://example1.com/",
      "name": "WebStreamrMBG 🇩🇪",
      "title": "🔗 hoster.com",
    },
  ],
  "ttl": 1,
}
`;

exports[`resolve ignores not found errors 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve keeps fallback sources if needed 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-rgshows-rgshows-multi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Origin": "https://www.rgshows.ru",
          "Referer": "https://www.rgshows.ru/",
          "User-Agent": "Mozilla",
        },
      },
    },
    "name": "WebStreamrMBG 🌐 1080p",
    "title": "Wake Up Dead Man: A Knives Out Mystery (2025)
🔗 RgShows",
    "url": "https://cdn.1shows.app/e/DBkXNgRLXFBfRllF/master.m3u8",
  },
]
`;

exports[`resolve returns empty array if no source found anything 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns empty array if no source supported the type 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns info as stream if no sources were configured 1`] = `
{
  "streams": [
    {
      "externalUrl": "http://localhost/",
      "name": "WebStreamrMBG",
      "title": "⚠️ No sources found. Please re-configure the plugin.",
    },
  ],
}
`;

exports[`resolve returns sorted results 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-dropload-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1395864371,
    },
    "name": "WebStreamrMBG 🇩🇪 1080p",
    "title": "des-teufels-bad-2024
💾 1.3 GB 🔗 Dropload from MeineCloud",
    "url": "https://srv34.dropload.io/hls2/01/00197/lyo2h1snpe5c_h/master.m3u8?t=MZSqs3F338ocbM2eTs8X23s585dWcYuilGrNNcidNas&s=1749846846&e=14400&f=987607&srv=srv27&i=0.0&sp=0&ii=50.99.15.93&p1=srv27&p2=srv27",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-dropload-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 Dropload from MostraGuarda",
    "url": "https://srv34.dropload.io/hls2/01/00200/xsr90y2ltdyx_h/master.m3u8?t=rsJMeR8rtWZxFi_3DOdlt98U0rvAMincCe4-awDQzHE&s=1749846846&e=14400&f=1004116&srv=srv24&i=0.0&sp=0&ii=50.99.15.93&p1=srv24&p2=srv24",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-supervideo-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 SuperVideo from MostraGuarda",
    "url": "https://hfs311.serversicuro.cc/hls/,dnzpcjj427g4a3gyvbth53rxqgffbu4vol4o7gg7pskpzb6josghbkwhnisq,.urlset/master.m3u8",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-supervideo-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1073741824,
    },
    "name": "WebStreamrMBG 🇩🇪 720p",
    "title": "des-teufels-bad-2024
💾 1 GB 🔗 SuperVideo from MeineCloud",
    "url": "https://hfs309.serversicuro.cc/hls/,dnzpfi3d27g4a3gyvbmh5klwtl65qh654hyjtgupd6p577fze64mz3bsmdyq,.urlset/master.m3u8",
  },
]
`;

exports[`resolve returns sorted results 2`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-dropload-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1395864371,
    },
    "name": "WebStreamrMBG 🇩🇪 1080p",
    "title": "des-teufels-bad-2024
💾 1.3 GB 🔗 Dropload from MeineCloud",
    "url": "https://srv34.dropload.io/hls2/01/00197/lyo2h1snpe5c_h/master.m3u8?t=MZSqs3F338ocbM2eTs8X23s585dWcYuilGrNNcidNas&s=1749846846&e=14400&f=987607&srv=srv27&i=0.0&sp=0&ii=50.99.15.93&p1=srv27&p2=srv27",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-dropload-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://dr0pstream.com/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 Dropload from MostraGuarda",
    "url": "https://srv34.dropload.io/hls2/01/00200/xsr90y2ltdyx_h/master.m3u8?t=rsJMeR8rtWZxFi_3DOdlt98U0rvAMincCe4-awDQzHE&s=1749846846&e=14400&f=1004116&srv=srv24&i=0.0&sp=0&ii=50.99.15.93&p1=srv24&p2=srv24",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-supervideo-it",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1181116006,
    },
    "name": "WebStreamrMBG 🇮🇹 720p",
    "title": "the-devils-bath-2024-sd-sub-ita
💾 1.1 GB 🔗 SuperVideo from MostraGuarda",
    "url": "https://hfs311.serversicuro.cc/hls/,dnzpcjj427g4a3gyvbth53rxqgffbu4vol4o7gg7pskpzb6josghbkwhnisq,.urlset/master.m3u8",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-supervideo-de",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Referer": "https://supervideo.cc/",
        },
      },
      "videoSize": 1073741824,
    },
    "name": "WebStreamrMBG 🇩🇪 720p",
    "title": "des-teufels-bad-2024
💾 1 GB 🔗 SuperVideo from MeineCloud",
    "url": "https://hfs309.serversicuro.cc/hls/,dnzpfi3d27g4a3gyvbmh5klwtl65qh654hyjtgupd6p577fze64mz3bsmdyq,.urlset/master.m3u8",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-external-de",
      "notWebReady": true,
    },
    "externalUrl": "https://mixdrop.ag/e/3nzwveprim63or6",
    "name": "WebStreamrMBG 🇩🇪 ⚠️ external",
    "title": "🔗 mixdrop.ag from MeineCloud",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-external-it",
      "notWebReady": true,
    },
    "externalUrl": "https://mixdrop.ag/e/vk196d6xfzwwo1",
    "name": "WebStreamrMBG 🇮🇹 ⚠️ external",
    "title": "🔗 mixdrop.ag from MostraGuarda",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-meinecloud-external-de",
      "notWebReady": true,
    },
    "externalUrl": "https://dood.to/e/sk1m9eumzyjj",
    "name": "WebStreamrMBG 🇩🇪 ⚠️ external",
    "title": "🔗 dood.to from MeineCloud",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-mostraguarda-external-it",
      "notWebReady": true,
    },
    "externalUrl": "https://dood.to/e/37o04m33q3g5",
    "name": "WebStreamrMBG 🇮🇹 ⚠️ external",
    "title": "🔗 dood.to from MostraGuarda",
  },
]
`;

exports[`resolve returns source errors as stream 1`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve returns source errors as stream 2`] = `
{
  "streams": [],
  "ttl": 900000,
}
`;

exports[`resolve skips fallback sources if possible 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-rgshows-rgshows-multi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Origin": "https://www.rgshows.ru",
          "Referer": "https://www.rgshows.ru/",
          "User-Agent": "Mozilla",
        },
      },
    },
    "name": "WebStreamrMBG 🌐 1080p",
    "title": "Wake Up Dead Man: A Knives Out Mystery (2025)
🔗 RgShows",
    "url": "https://cdn.1shows.app/e/DBkXNgRLXFBfRllF/master.m3u8",
  },
]
`;

exports[`resolve uses priority for sorting 1`] = `
[
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-vixsrc-vixsrc-multi_en_it",
      "notWebReady": true,
    },
    "name": "WebStreamrMBG 🌐 🇺🇸 🇮🇹 1080p",
    "title": "South Park S26E02
🔗 VixSrc",
    "url": "https://vixsrc.to/playlist/418073.m3u8?token=19d4fca75ba7f69b2e96fa429d264517&expires=1781602231&h=1",
  },
  {
    "behaviorHints": {
      "bingeGroup": "webstreamr-mbg-rgshows-rgshows-multi",
      "notWebReady": true,
      "proxyHeaders": {
        "request": {
          "Origin": "https://www.rgshows.ru",
          "Referer": "https://www.rgshows.ru/",
          "User-Agent": "Mozilla",
        },
      },
    },
    "name": "WebStreamrMBG 🌐 1080p",
    "title": "South Park S26E02
🔗 RgShows",
    "url": "https://sad.moriartis.store/v4/pk8/karuh/cf-master.1755845058.txt?t=121478a4&e=1765241578",
  },
]
`;
